更改 电量电费展示

--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesIndex.cshtml
@@ -38,9 +38,12 @@
             </div>
         </div>
 
-        <div class="col-sm-12 select-table table-striped">
+        <div class="col-sm-12 select-table table-bordered">
             <table id="gridTable" data-mobile-responsive="true"></table>
         </div>
+        @*<div class="col-sm-12 select-table table-striped">
+            <table id="gridTable" data-mobile-responsive="true"></table>
+        </div>*@
     </div>
 </div>
 
