--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div class="col-sm-12 select-table table-striped">
+        <div class="col-sm-12 select-table table-bordered">
             <table id="gridTable" data-mobile-responsive="true"></table>
         </div>
     </div>
@@ -67,7 +67,7 @@
             //showColumns: false,
             columns: [
                 [
-                    { title: '总计详情', align: 'center', colspan: 2 },
+                    { title: '总计详情', align: 'center', colspan: 1 },
                     { title: '尖峰', align: 'center', colspan: 3 },
                     { title: '波峰', align: 'center', colspan: 3 },
                     { title: '波谷', align: 'center', colspan: 3 },
@@ -75,34 +75,34 @@
                 ],
                 //{ checkbox: true, visible: true },
                 [
-                    {
-                        field: 'BaseCreateTime', title: '获取时间', formatter: function (value, row, index) {
-                            return ys.formatDate(value, "yyyy-MM-dd");
-                        }
-                    },
+                    //{
+                    //    field: 'BaseCreateTime', title: '获取时间', formatter: function (value, row, index) {
+                    //        return ys.formatDate(value, "yyyy-MM-dd");
+                    //    }
+                    //},
                     { field: 'Id', title: 'Id', visible: false },
 
                     { field: 'LoopName', title: '回路名称' },
 
-                    { field: 'spike_value', title: '尖峰电量' },
-                    { field: 'spike_price', title: '尖峰电价' },
+                    { field: 'spike_value', title: '尖峰总电量' },
+                    { field: 'spike_price', title: '尖峰总电价' },
                     //电费
-                    { field: 'spike_charges', title: '尖峰电费' },
+                    { field: 'spike_charges', title: '尖峰总电费' },
 
-                    { field: 'peak_value', title: '波峰电量' },
-                    { field: 'peak_price', title: '波峰电价' },
+                    { field: 'peak_value', title: '波峰总电量' },
+                    { field: 'peak_price', title: '波峰总电价' },
                     //电费
-                    { field: 'peak_charges', title: '波峰电费' },
+                    { field: 'peak_charges', title: '波峰总电费' },
 
-                    { field: 'valley_value', title: '波谷电量' },
-                    { field: 'valley_price', title: '波谷电价' },
+                    { field: 'valley_value', title: '波谷总电量' },
+                    { field: 'valley_price', title: '波谷总电价' },
                     //电费
-                    { field: 'valley_charges', title: '波谷电费' },
+                    { field: 'valley_charges', title: '波谷总电费' },
 
-                    { field: 'bottom_value', title: '低谷电量' },
-                    { field: 'bottom_price', title: '低谷电价' },
+                    { field: 'bottom_value', title: '低谷总电量' },
+                    { field: 'bottom_price', title: '低谷总电价' },
                     //电费
-                    { field: 'bottom_charges', title: '低谷电费' },
+                    { field: 'bottom_charges', title: '低谷总电费' },
                 ]
                 
             ],
