--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectImportBySegment.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectImportBySegment.cshtml
@@ -19,13 +19,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label "></label>
             <div class="control-label" style="text-align:center">
-                <a href='@Url.Content("~/template/日期时间电量模板.xlsx")' class="btn btn-default btn-xs"><i class="fa fa-file-excel-o"></i> 下载模板</a>
+                <a href='@Url.Content("~/template/峰尖峰谷低谷四段电量模板.xlsx")' class="btn btn-default btn-xs"><i class="fa fa-file-excel-o"></i> 下载模板</a>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label "></label>
             <div class="col-sm-10 text-danger">
-                请导入日期时间电量数据文件<br/>
+                请导入峰尖峰谷低谷四段电量数据文件<br />
                 提示：仅允许导入“xls”或“xlsx”格式文件！
             </div>
         </div>
@@ -74,7 +74,7 @@
         var postData = $("#form").getWebControls();
         postData.FilePath = filePath;
         ys.ajax({
-            url: '@Url.Content("~/ElectChargesManage/ElectCharges/ImportElectJson")',
+            url: '@Url.Content("~/ElectChargesManage/ElectCharges/ImportElectBySegmentJson")',
             type: "post",
             data: postData,
             success: function (obj) {
