--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectImportBySegment.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectImportBySegment.cshtml
@@ -9,6 +9,9 @@
 }
 
 <div class="wrapper animated fadeInRight">
+    <div class="form-group">
+            <h3>根据模板样式导入电量数据</h3>
+    </div>
     <form id="form" class="form-horizontal m">
         <div class="form-group">
             <label class="col-sm-2 control-label ">选择文件</label>
