1.更改导入模板 2.五段

--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesIndex.cshtml
@@ -107,7 +107,8 @@
                     { title: '尖峰', align: 'center', colspan: 3 },
                     { title: '波峰', align: 'center', colspan: 3 },
                     { title: '波谷', align: 'center', colspan: 3 },
-                    { title: '低谷', align: 'center', colspan: 4 },
+                    { title: '低谷', align: 'center', colspan: 3 },
+                    { title: '平段', align: 'center', colspan: 4 },
                 ],
                 //{ checkbox: true, visible: true },
                 [
@@ -139,6 +140,11 @@
                     { field: 'bottom_price', title: '低谷电价' },
                     //电费
                     { field: 'bottom_charges', title: '低谷电费' },
+
+                    { field: 'normal_value', title: '平段电量' },
+                    { field: 'normal_price', title: '平段电价' },
+                    //电费
+                    { field: 'normal_charges', title: '平段电费' },
 
                     //{
                     //    field: 'UserStatus', title: '状态', formatter: function (value, row, index) {
