--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
@@ -86,6 +86,7 @@
                     { title: '波峰', align: 'center', colspan: 3 },
                     { title: '波谷', align: 'center', colspan: 3 },
                     { title: '低谷', align: 'center', colspan: 3 },
+                    { title: '平段', align: 'center', colspan: 3 },
                     { title: '合计', align: 'center', colspan: 3 },
                 ],
                 //{ checkbox: true, visible: true },
@@ -118,6 +119,11 @@
                     { field: 'bottom_price', title: '低谷总电价' },
                     //电费
                     { field: 'bottom_charges', title: '低谷总电费' },
+
+                     { field: 'normal_value', title: '平段总电量' },
+                    { field: 'normal_price', title: '平段总电价' },
+                    //电费
+                    { field: 'normal_charges', title: '平段总电费' },
 
                     //总电费
                     { field: 'sum_charges' ,title : '总电费' },
