--- a/AlfredAdminLogin/Views/Home/Welcome.cshtml
+++ b/AlfredAdminLogin/Views/Home/Welcome.cshtml
@@ -8,36 +8,13 @@
             <div class="col-sm-12">
                 <blockquote class="text-warning" style="font-size:14px">
                     <p>
-                        <h2>尹俊伟正在学习Web !!! </h2>
-                    </p>
-                    <p>
+                        <h2>欢迎来到物联网控制台 !!! </h2>
                     </p>
                 </blockquote>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-6">
-                <div class="ibox float-e-margins">
-                    <div class="ibox-title">
-                        <h5>框架介绍</h5>
-                        <div class="ibox-tools">
-                            <a class="collapse-link">
-                                <i class="fa fa-chevron-up"></i>
-                            </a>
-                            <a class="close-link">
-                                <i class="fa fa-times"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="ibox-content">
-                        <div class="row">
-                            <div class="col-sm-12" style="font-size:14px">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="col-sm-6">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
@@ -64,69 +41,6 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-4">
-            </div>
-            <div class="col-sm-4">
-                <div class="ibox float-e-margins">
-                    <div class="ibox-title">
-                        <h5>更新日志</h5>
-                        <div class="ibox-tools">
-                            <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            <a class="close-link"><i class="fa fa-times"></i></a>
-                        </div>
-                    </div>
-                    <div class="ibox-content no-padding">
-                        <div class="panel-body">
-                            <div class="panel-group" id="version">
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h5 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#version" href="#v310">v3.1.0</a><code class="pull-right">2020.02.20</code>
-                                        </h5>
-                                    </div>
-                                    <div id="v310" class="panel-collapse collapse in">
-                                        <div class="panel-body">
-                                            <ol>
-                                                <li>1. 框架由.NET Core 2.2升级到.NET Core 3.1</li>
-                                                <li>2. 导入文件支持xlsx格式</li>
-                                                <li>3. 菜单支持打开外部链接</li>
-                                                <li>4. 修复读取cookie样式bug</li>
-                                                <li>5. 部门和用户的数据权限修改，只能看到自己及以下</li>
-                                                <li>6. 菜单新增或编辑之后，显示对应的数据</li>
-                                                <li>7. 定时任务支持暂停和更新任务周期</li>
-                                                <li>8. 数据库和实体之间映射约定修改</li>
-                                                <li>9. 支持移动端</li>
-                                            </ol>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h5 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#version" href="#v220">v2.2.0</a><code class="pull-right">2019.09.27</code>
-                                        </h5>
-                                    </div>
-                                    <div id="v220" class="panel-collapse collapse">
-                                        <div class="panel-body">
-                                            <ol>
-                                                <li>1. 正式开源YiShaAdmin 2.2</li>
-                                                <li>2. 代码自动生成的时候，根据配置，生成对应菜单</li>
-                                                <li>3. 修复bootstrap tree table的expandFirst为true，tree展开的问题</li>
-                                                <li>4. 修复头像上传报错</li>
-                                                <li>5. 增加多个基类实体，根据业务按需继承</li>
-                                                <li>6. 调整项目文件结构，使代码结构更加清晰</li>
-                                                <li>7. 增加NUnit测试项目</li>
-                                                <li>8. 增加常用的前端组件示例</li>
-                                                <li>9. 增加用户导入示例</li>
-                                            </ol>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>     
         </div>
 
     </div>
