--- a/AlfredAdminLogin/Areas/DataManage/Views/Data/DataIndex.cshtml
+++ b/AlfredAdminLogin/Areas/DataManage/Views/Data/DataIndex.cshtml
@@ -18,7 +18,7 @@
                     网关列表
                 </div>
                 <div class="box-tools pull-right">
-                    <a type="button" class="btn btn-box-tool menuItem" href="#" onclick="showDepartmentForm()" title="管理部门"><i class="fa fa-edit"></i></a>
+                    <a type="button" class="btn btn-box-tool menuItem" href="#" onclick="showDepartmentForm()" title="管理网关"><i class="fa fa-edit"></i></a>
                     <button type="button" class="btn btn-box-tool" id="btnExpand" title="展开" style="display:none;"><i class="fa fa-chevron-up"></i></button>
                     <button type="button" class="btn btn-box-tool" id="btnCollapse" title="折叠"><i class="fa fa-chevron-down"></i></button>
                     <button type="button" class="btn btn-box-tool" id="btnRefresh" title="刷新列表"><i class="fa fa-refresh"></i></button>
@@ -34,20 +34,17 @@
 <div class="container-div ui-layout-center">
     <div class="row">
         <div id="searchDiv" class="col-sm-12 search-collapse">
-            <input type="hidden" id="departmentId" col="DepartmentId">
+            <input type="hidden" id="gatewayTypeId" col="Id">
             <div class="select-list">
                 <ul>
                     <li>
-                        登录名称：<input id="userName" col="UserName" type="text" />
+                        网关名称：<input id="gatewayName" col="GatewayName" type="text" />
                     </li>
                     <li>
-                        手机号码：<input id="mobile" col="Mobile" type="text" />
-                    </li>
-                    <li>
-                        用户状态：<span id="userStatus" col="UserStatus"></span>
+                        数据类型：<input id="dataTypeName" col="DataTypeName" type="text" />
                     </li>
                     <li class="select-time">
-                        <label>创建时间： </label>
+                        <label>数据获取时间： </label>
                         <input id="startTime" col="StartTime" type="text" class="time-input" placeholder="开始时间" />
                         <span>-</span>
                         <input id="endTime" col="EndTime" type="text" class="time-input" placeholder="结束时间" />
@@ -103,7 +100,7 @@
             maxHeight: "700px",
             callback: {
                 onClick: function (event, treeId, treeNode) {
-                    $("#gatewayTypeTree").val(treeNode.id);
+                    $("#gatewayTypeId").val(treeNode.id);
                     console.log(treeNode.id);
                     searchGrid();
                 }
