--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/PriceIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/PriceIndex.cshtml
@@ -39,7 +39,7 @@
             sortOrder: 'Desc',
             columns: [
                 { checkbox: true, visible: true },
-                { field: 'Id', title: 'Id', visible: false },
+                { field: 'Id', title: 'Id', visible: true },
                 { field: 'Province', title: '省份' },
                 //{
                 //    field: 'NewsType', title: '文章类型', formatter: function (value, row, index) {
@@ -48,8 +48,8 @@
                 //},
                 { field: 'spike_price', title: '尖峰电价' },
                 { field: 'peak_price', title: '波峰电价' },
-                { field: 'valley_price', title: '波谷电价' },
-                { field: 'bottom_price', title: '低谷电价' },
+                { field: 'valley_price', title: '低谷电价' },
+                { field: 'bottom_price', title: '深谷电价' },
                 { field: 'normal_price', title: '平段电价' },
                 { field: 'BaseCreateTime', title: '创建时间' },
                 { field: 'BaseModifyTime', title: '修改时间' },
