--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/CalElectChargesIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/CalElectChargesIndex.cshtml
@@ -18,7 +18,7 @@
             @*<a id="btnExport" class="btn btn-warning" onclick="exportForm()"><i class="fa fa-download"></i> 导出</a>*@
         </div>
         <div id="toolbar" class="btn-group-sm">
-            <h2>导入峰尖峰谷低谷四段电量模板信息,由系统自动计算电费</h2>
+            <h2>导入峰尖峰谷深谷四段电量模板信息,由系统自动计算电费</h2>
             <a id="btnImport" class="btn btn-info" onclick="importBySegmentForm()"><i class="fa fa-upload"></i> 导入</a>
             @*<a id="btnExport" class="btn btn-warning" onclick="exportForm()"><i class="fa fa-download"></i> 导出</a>*@
         </div> 
