--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/ElectChargesSumIndex.cshtml
@@ -84,8 +84,8 @@
                     { title: '总计详情', align: 'center', colspan: 1 },
                     { title: '尖峰', align: 'center', colspan: 3 },
                     { title: '波峰', align: 'center', colspan: 3 },
-                    { title: '波谷', align: 'center', colspan: 3 },
                     { title: '低谷', align: 'center', colspan: 3 },
+                    { title: '深谷', align: 'center', colspan: 3 },
                     { title: '平段', align: 'center', colspan: 3 },
                     { title: '合计', align: 'center', colspan: 3 },
                 ],
@@ -110,15 +110,15 @@
                     //电费
                     { field: 'peak_charges', title: '波峰总电费' },
 
-                    { field: 'valley_value', title: '波谷总电量' },
-                    { field: 'valley_price', title: '波谷总电价' },
+                    { field: 'valley_value', title: '低谷总电量' },
+                    { field: 'valley_price', title: '低谷总电价' },
                     //电费
-                    { field: 'valley_charges', title: '波谷总电费' },
+                    { field: 'valley_charges', title: '低谷总电费' },
 
-                    { field: 'bottom_value', title: '低谷总电量' },
-                    { field: 'bottom_price', title: '低谷总电价' },
+                    { field: 'bottom_value', title: '深谷总电量' },
+                    { field: 'bottom_price', title: '深谷总电价' },
                     //电费
-                    { field: 'bottom_charges', title: '低谷总电费' },
+                    { field: 'bottom_charges', title: '深谷总电费' },
 
                      { field: 'normal_value', title: '平段总电量' },
                     { field: 'normal_price', title: '平段总电价' },
