--- a/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/PriceForm.cshtml
+++ b/AlfredAdminLogin/Areas/ElectChargesManage/Views/ElectCharges/PriceForm.cshtml
@@ -5,37 +5,43 @@
 <div class="wrapper animated fadeInRight">
     <form id="form" class="form-horizontal m">
         <div class="form-group">
-            <label class="col-sm-3 control-label ">Province</label>
+            <label class="col-sm-3 control-label ">Id<font class="red"> *</font></label>
+            <div class="col-sm-8">
+                <input id="id" col="Id" type="text" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label ">省份<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="province" col="Province" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label ">spike_price<font class="red"> *</font></label>
+            <label class="col-sm-3 control-label ">尖峰电价<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="spike_price" col="spike_price" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label ">peak_price</label>
+            <label class="col-sm-3 control-label ">波峰电价<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="peak_price" col="peak_price" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label ">valley_price</label>
+            <label class="col-sm-3 control-label ">低谷电价<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="valley_price" col="valley_price" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label ">bottom_price</label>
+            <label class="col-sm-3 control-label ">深谷电价<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="bottom_price" col="bottom_price" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label ">normal_price</label>
+            <label class="col-sm-3 control-label ">平段电价<font class="red"> *</font></label>
             <div class="col-sm-8">
                 <input id="normal_price" col="normal_price" type="text" class="form-control" />
             </div>
@@ -50,6 +56,7 @@
 
         $('#form').validate({
             rules: {
+                id: { required: true },
                 province: { required: true },
                 spike_price: { required: true },
                 peak_price: { required: true },
